feat: including product_details and shipment_details to order
